2014-09-11  Paul Eggert  <eggert@cs.ucla.edu>

	* gnus-cloud.el (gnus-cloud-parse-version-1): Fix misspelling
	of ":delete".

2014-08-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-browse-html-save-cid-content)
	(gnus-article-browse-html-parts):
	Revert last change that breaks links other than cid contents.

2014-08-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-browse-html-save-cid-content)
	(gnus-article-browse-html-parts): Make cid file names relative.

2014-08-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-view.el (mm-display-inline-fontify): Make the working buffer
	temporarily displayed when running a mode function (at least org-mode
	requires it).

2014-08-14  Alan Schmitt  <alan.schmitt@polytechnique.org>

	* gnus-sum.el (gnus-summary-expire-articles): Functions registered to
	the gnus-summary-article-expire-hook should be told where the function
	is going. In particular, the Gnus registry might want to know.

2014-08-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* gnus-art.el (gnus-hidden-properties): Drop the evil `intangible'.

2014-08-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-summary-expire-articles): Revert.

2014-08-05  Eric Abrahamsen  <eric@ericabrahamsen.net>

	* gnus-sum.el (gnus-summary-expire-articles): Functions registered to
	the gnus-summary-article-expire-hook should be told where the function
	is going. In particular, the Gnus registry might want to know.

2014-08-03  Paul Eggert  <eggert@cs.ucla.edu>

	Don't mishandle year-9999 dates (Bug#18176).
	* parse-time.el (parse-time-rules):
	Allow years up to most-positive-fixnum.
	* time-date.el (date-to-time):
	Pass "Specified time is not representable" errors through.

2014-07-31  Tassilo Horn  <tsdh@gnu.org>

	* gnus-msg.el (gnus-inews-insert-gcc): Allow `gcc-self' to be a list of
	groups and t.

2014-07-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-utils.el (gnus-recursive-directory-files):